--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<img src="graphics/Pat Maloney Appear One Play.gif" id="logo" alt="Pat Maloney personal logo">
+<img src="Pat Maloney Appear One Play.gif" id="logo" alt="Pat Maloney personal logo">
 <div class=container>
 <div id=education>
 <h2>Education</h2>
