--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="resume-style.css">
 <script id="logoAnimation" src="resume.js" async></script>
+    <title>Pat Maloney Resume</title>
 
 
 
