--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="resume-style.css">
 <script id="logoAnimation" src="resume.js" async></script>
-<link rel="icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="graphics/favicon.ico"/>
     <title>Pat Maloney Resume</title>
 
 
