--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Professional Sequence in Editing<br><br>
 </p>
 
 <h3>Minneapolis College</h3>
-<p>May 2018 – December 2019<br>
-    Core Certicate in Graphic Design<br><br></p>
+<p>January 2018 – December 2019<br>
+    Core Certificate in Graphic Design<br><br></p>
 
     <h3>Codecademy</h3>
     <p>August 2019 – Present<br>
