--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Production Director<br>
 </p>
 
 </div>
-
 </div>
+<p><br><br>pat.f.maloney@gmail.com | 952-715-1368 | 307 W 15th Street, #34, Minneapolis, MN, 55403</p>
 </body>
 </html>
